Disable Network check by default (#2480)
This "test" is not reliable.
(a handful of broker requests failed with this check, but then succeeded
with OneAuth.)

This PR will disable the test by default - bringing the behavior in BOTH
Broker and Common to match with OneAuth's.

---

NOTE: [Doze mode network
check](https://github.com/AzureAD/microsoft-authentication-library-common-for-android/blob/3bd7337d4bc0df4974cc30701b22a43b3a4d8059/common/src/main/java/com/microsoft/identity/common/internal/platform/AndroidPlatformUtil.java#L122)
is not in scope of this work.
(that check is set by SDK.
- In MSAL, that's true by default (via MSAL config).
- In OneAuth, it's always false. There's no way for an app to set, and
OneAuth never touches it).
# Conflicts:
#	changelog.txt
#	common4j/src/main/com/microsoft/identity/common/java/flighting/CommonFlight.java

# Conflicts:
#	changelog.txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 17.7.2
+---------
+- [MINOR] Disable Network check by default (#2480)
+
 Version 17.7.1
 ---------
 - [PATCH] Return Family ID in LocalAuthenticationResult (#2479)
