Custom Response handler API in MicrosoftStsOAuth2Strategy (#2478)
Changes:
1. Added requestToken(MicrosoftStsTokenRequest,
AbstractMicrosoftStsTokenResponseHandler) to MicrosoftStsOAuth2Strategy.
This would be used for PRT acquisition flows so supply handler based on
protocol leg.
2. Added Util method to check response content media type in
HttpResponse

Corresponding broker PR
Broker PR: https://github.com/AzureAD/ad-accounts-for-android/pull/2911

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 V.Next
----------
+----------
+- [MINOR] Add API in MicrosoftStsOAuthStrategy to request token and handle response with provided handler (@2478)
 - [MINOR] Setting flights to control UrlConnection timeout values (#2473)
 - [PATCH] Fix Native Auth authority data being persisted across different SDK instances (#2462)
 - [PATCH] Fix incorrect formatting when logging native auth objects
