Allow OneAuth to set Max MSAL-Broker Protocol version (#2490)
Previously, we've always bumped the max protocol version on the
MSAL/OneAuth side by default.
(= declaring that OneAuth is aware and supports whatever change
introduced by that protocol version in broker)

OneAuth should verify first that its code is compatible with the new
protocol version before bumping it on their side.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Allow OneAuth to set Max MSAL-Broker Protocol version (#2490)
 - [MAJOR] Remove RT from AAD token responses (#2483)
 - [MINOR] Add API in MicrosoftStsOAuthStrategy to request token and handle response with provided handler (@2478)
 - [MINOR] Setting flights to control UrlConnection timeout values (#2473)
