Changes needed for token binding CA policy error handling (#2453)
Adding logic to handle token binding CA policy errors.

Corresponding STS side PR for iOS and mac (Android will come later)-
https://msazure.visualstudio.com/DefaultCollection/One/_git/ESTS-Main/pullrequest/10445085?_a=files&path=/src/Product/Microsoft.AzureAD.Common/Configuration/ICloudStsSettings.cs

Description of errors/redirect uri returned from server for upgrading to
or performing strong device registration
Silent Token Request (when device is registered)--> error:
invalid_grant, suberror: insufficient_device_registration
Silent Token Request (when device is not registered)--> error:
device_authentication_failed
 
Interactive Token Request (when device is registered) --> redirect uri-
msauth://upgradeReg?username=<>&client_info=<>&token_protection_required=true
Interactive Token Request (when device is not registered) -->
msauth://wpj?username=<>&client_info=<>&token_protection_required=true

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@ V.Next
 
 Version 17.7.0
 ---------
+- [MINOR] Changes needed for token binding CA policy error handling (#2453)
 - [MINOR] Add null cursor BrokerCommunicationException error category (#2459)
 - [MINOR] Classifying more UNKNOWN_ERRORs (#2460)
 
