Native auth MFA, AB#2083675, Fixes AB#2083675 (#2489)
Support for email OTP based MFA in native authentication flows.

- Added MFA results and states to the SDK interface
- Business logic & API integration
- Custom error handling for MFA required error during calls to /token
with grant_type=refresh_token
- Private preview warnings in console and documentation
- Unit and E2E production tests

MSAL PR:
https://github.com/AzureAD/microsoft-authentication-library-for-android/pull/2167


[AB#2083675](https://identitydivision.visualstudio.com/fac9d424-53d2-45c0-91b5-ef6ba7a6bf26/_workitems/edit/2083675)

--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,7 @@ Version 18.0.0
 - [PATCH] Move MS STS Response handling to separate class (#2471)
 - [MINOR] Add support for email OTP MFA in native authentication (#2468)
 - [MINOR] Moving OS version check for passkeys (#2450)
+- [MINOR] Support for email OTP MFA in native authentication (#2489)
 - [PATCH] Change LTW debug signature hash (#2492)
 - [MINOR] Add new span name for OnUpgradeReceiver (#2494)
 
