--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 vNext
 ----------
+- [MINOR] Use legacy FIDO2 API to provide security key support to Android 13 devices (#2508)
 
 Version 18.0.0 
 ----------
