--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+vNext
+---------
+- [MINOR] On GetPreferredAuthMethod return NONE when Authenticator is not installed (#2523)
+
 Version 18.1.0
 ----------
 (common4j 15.1.0)
